# ftr

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  ftr.c  ftr.h  main.cpp
cmake/: ftrConfig.cmake.in
examples/: flows.cpp  ftr_expr.c  min.cpp
src/: ftr.c  ftr.h
